<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">信息採集</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="welcome">欢迎使用信息采集系统：</string>
    <string name="username_alert">用户名:</string>
    <string name="password_alert">密码:</string>
    <string name="modify_password">修改密码?</string>
    <string name="login">登录</string>
    <string name="old_pwd">原密码:</string>
    <string name="modify_password_title">密码修改</string>
    <string name="modify_custom_column">自定义表名</string>
    <string name="new_pwd">新密码:</string>
    <string name="confirm_pwd">密码确认:</string>
    <string name="submit">提交</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="add">添加</string>
    <string name="modify">修改</string>
    <string name="delete">删除</string>
    <string name="clear">清空</string>
    <string name="export">导出</string>
    <string name="back">返回</string>
    <string name="set">设置</string>
    <string name="modify_column">修改自定义表的列名</string>
    <string name="register_title">用户注册</string>
     <string name="username_title">用户名</string>
      <string name="now_pwd">密码</string>

</resources>