<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/register_title" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp" >

        <TextView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/username_title" />

        <EditText
            android:id="@+id/old_pwd_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <TextView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/now_pwd" />

        <EditText
            android:id="@+id/new_pwd_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword|numberPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" >

            <TextView
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/confirm_pwd" />

            <EditText
                android:id="@+id/confirm_pwd_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword|numberPassword" />
        </LinearLayout>
         <RelativeLayout
             android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center">

        <Button
            android:id="@+id/back"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"   android:background="@drawable/btn_selector"
            android:text="@string/back" />


        <Button
            android:id="@+id/submit"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/back"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"   android:background="@drawable/btn_selector"
            android:text="@string/submit" />
    </RelativeLayout>
        
    </LinearLayout>
